// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter renders with empty filter text 1`] = `
<div>
  <span
    class="container collapsed"
  >
    <button
      class="searchButton"
    >
      <svg
        color="#404b5a"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 3a7 7 0 015.6 11.201.056.056 0 01.013.009l.094.083 5 5a1 1 0 01-1.32 1.497l-.094-.083-5-5a1.009 1.009 0 01-.094-.108A7 7 0 1110 3zm0 2a5 5 0 100 10 5 5 0 000-10z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="searchArea"
    >
      <div
        class="searchIconContainer"
      >
        <svg
          color="#404b5a"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 1a5 5 0 013.871 8.164l4.483 4.482-.708.708L9.164 9.87A5 5 0 116 1zm0 1a4 4 0 100 8 4 4 0 000-8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <input
        class="input"
        data-test="search-dashboard-input"
        placeholder="Search for a dashboard"
        type="text"
        value=""
      />
      
    </div>
  </span>
</div>
`;

exports[`Filter renders with filter text 1`] = `
<div>
  <span
    class="container collapsed"
  >
    <button
      class="searchButton"
    >
      <svg
        color="#404b5a"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 3a7 7 0 015.6 11.201.056.056 0 01.013.009l.094.083 5 5a1 1 0 01-1.32 1.497l-.094-.083-5-5a1.009 1.009 0 01-.094-.108A7 7 0 1110 3zm0 2a5 5 0 100 10 5 5 0 000-10z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="searchArea"
    >
      <div
        class="searchIconContainer"
      >
        <svg
          color="#404b5a"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 1a5 5 0 013.871 8.164l4.483 4.482-.708.708L9.164 9.87A5 5 0 116 1zm0 1a4 4 0 100 8 4 4 0 000-8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <input
        class="input"
        data-test="search-dashboard-input"
        placeholder="Search for a dashboard"
        type="text"
        value="rainbow"
      />
      <div
        class="clearButtonContainer"
      >
        <button
          class="button"
        >
          <span>
            <svg
              class="icon"
              fill="#404b5a"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </span>
</div>
`;
